# ARrats

./: .gitignore  CMakeLists.txt  README.md  TriggerScan.srv  allergen_manager_node.py  interactive_vision_node.py  juno.launch  package.xml  speech_interface_node.py  user_guide.md  vision_node.py
OCR/: ingredients_list.txt  ocr.py
launch/: juno.launch
nodes/: allergen_detection_node.py  allergen_manager_node.py  capture_preprocess_node.py  googleOCR.py  google_ocr_node.py  interactive_vision_node.py  ocr_node.py  speech_interface_node.py  verbal_reporter_node.py  vision_node.py
