<?xml version="1.0"?>
<package format="2">
  <name>allergen_scanner</name>
  <version>0.0.0</version>
  <description>An allergen scanning ROS package for Juno.</description>

  <maintainer email="mustar@todo.todo">mustar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python-pyttsx3</exec_depend>
  <exec_depend>python-speechrecognition</exec_depend>

  <export>
  </export>
</package>